--- a/02-summarizing-and-visualizing-data/04-lesson/02-04-lesson.Rmd
+++ b/02-summarizing-and-visualizing-data/04-lesson/02-04-lesson.Rmd
@@ -53,6 +53,10 @@ Here, you'll use the `email` dataset to settle that question.
 
 As you explore the association between spam and the length of an email, we'll use the **tidyverse** package for building data pipelines and visualisations and the **openintro** package that contains the `email`. These are loaded for you below.
 
+```{r load-pkg, eval = FALSE, echo = TRUE}
+library(tidyverse)
+library(openintro)
+```
 
 Using the `email` dataset:
 
