add `weeks_cut` as variable
In the solution chunk the x variable is missing.

--- a/03-introduction-to-linear-models/01-lesson/03-01-lesson.Rmd
+++ b/03-introduction-to-linear-models/01-lesson/03-01-lesson.Rmd
@@ -197,7 +197,7 @@ ggplot(data = ___,
 
 ```{r ex2-solution}
 ggplot(data = ncbirths,
-       aes(x = , y = weight)) +
+       aes(x = weeks_cut, y = weight)) +
   geom_boxplot()
 ```
 
