replace `comics` with `comics_updated`
In setup and exercise `comics_updated` is used correctly, but the solutions shows `comics``.

--- a/02-summarizing-and-visualizing-data/01-lesson/02-01-lesson.Rmd
+++ b/02-summarizing-and-visualizing-data/01-lesson/02-01-lesson.Rmd
@@ -911,7 +911,7 @@ Specify align as the x aesthetic, then facet by gender within facet_wrap().
 ```
 
 ```{r ex6-solution}
-ggplot(comics, aes(x = align)) + 
+ggplot(comics_updated, aes(x = align)) + 
   geom_bar() +
   facet_wrap(~ gender)
 ```
