delete redundant hint and last `+`
(a) The `+` in the last line of the exercise ggplot has to be deleted.
(b) hint & solution are the same / redundant and
(c) solution uses wrongly `pies` instead of `pies_updated`

--- a/02-summarizing-and-visualizing-data/01-lesson/02-01-lesson.Rmd
+++ b/02-summarizing-and-visualizing-data/01-lesson/02-01-lesson.Rmd
@@ -961,22 +961,16 @@ pies_updated <- pies %>%
 # Create barchart of flavor
 # Using plot flavor on y-axis so label text fits
 ggplot(___, aes(y = ___)) + 
-  geom_bar(fill = ___) + 
+  geom_bar(fill = ___) 
 ```
 
-```{r ex7-hint-1}
+```{r ex7-solution}
 # Create barchart of flavor
 # Using plot flavor on y-axis so label text fits
 ggplot(pies_updated, aes(y = flavor)) + 
   geom_bar(fill = "chartreuse") 
 ```
 
-
-```{r ex7-solution}
-# Create barchart of flavor
-ggplot(pies, aes(y = flavor)) + 
-  geom_bar(fill = "chartreuse") 
-```
 
 ## Congratulations!
 
