--- a/02-summarizing-and-visualizing-data/03-lesson/02-03-lesson.Rmd
+++ b/02-summarizing-and-visualizing-data/03-lesson/02-03-lesson.Rmd
@@ -890,7 +890,7 @@ p2 <- ggplot(life, aes(x = income, y = coast, color = coast)) +
 p1 + p2
 ```
 
-What we see is interesting: the boxplot flags many counties as outliers, both along the West Coast but also in the rest of the country as well. So why was the blip more apparent on the West Coast? It has to do with sample size. There are far fewer counties in the West Coast group, so these few outliers have an oversized effect on the density plot. In the case of the non-West Coast group, there are many many more counties that ended up washing out the effect of the outliers in the density plot.
+What we see is interesting: the boxplot flags many counties as outliers, both along the West Coast but also in the rest of the country as well. So why was the blip more apparent on the West Coast? It has to do with sample size. There are far fewer counties in the West Coast group, so these few outliers have an oversized effect on the density plot. In the case of the non-West Coast group, there are many more counties that ended up washing out the effect of the outliers in the density plot.
 
 ## Indicating outliers
 
