--- a/02-summarizing-and-visualizing-data/02-lesson/02-02-lesson.Rmd
+++ b/02-summarizing-and-visualizing-data/02-lesson/02-02-lesson.Rmd
@@ -26,7 +26,18 @@ library(openintro)
 library(emo)
 library(ggridges)
 
-cars <- read_csv("data/cars04.csv")
+cars <- read_csv("data/cars04.csv", col_types = cols(
+   msrp = col_integer(),
+   dealer_cost = col_integer(),
+   ncyl = col_integer(),
+   horsepwr = col_integer(),
+   city_mpg = col_integer(),
+   hwy_mpg = col_integer(),
+   weight = col_integer(),
+   wheel_base = col_integer(),
+   length = col_integer(),
+   width = col_integer()
+ ))
 
 ```
 
