--- a/01-data/01-lesson/01-01-lesson.Rmd
+++ b/01-data/01-lesson/01-01-lesson.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Getting Started with Data: 1 - Language of data"
+title: "Introduction to data: 1 - Language of data"
 output: 
   learnr::tutorial:
     progressive: true
