--- a/01-data/04-lesson/01-04-lesson.Rmd
+++ b/01-data/04-lesson/01-04-lesson.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Getting Started with Data: 4 - Case study"
+title: "Introduction to data: 4 - Case study"
 output: 
   learnr::tutorial:
     progressive: true
