--- a/02-explore/01-lesson/02-01-lesson.Rmd
+++ b/02-explore/01-lesson/02-01-lesson.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Summarizing and visualizing data: 1 - Exploring categorical data"
+title: "Exploratory data analysis: 1 - Exploring categorical data"
 output: 
   learnr::tutorial:
     progressive: true
