Update links from indices

--- a/01-data/index.Rmd
+++ b/01-data/index.Rmd
@@ -32,7 +32,7 @@ In this tutorial, we focus on steps 1 and 2 of this process.
 
 ## Lessons
 
-### 1 - [Language of data](https://openintro.shinyapps.io/ims-01-getting-started-with-data-01/)
+### 1 - [Language of data](https://openintro.shinyapps.io/ims-01-data-01/)
 
 * Load data from the textbook companion package
 * Introduce data frames and tidy data
@@ -43,7 +43,7 @@ In this tutorial, we focus on steps 1 and 2 of this process.
   * Combine levels of categorical
   * Create new variable based on two existing variables (e.g. BMI)
 
-### 2 - [Types of studies](https://openintro.shinyapps.io/ims-01-getting-started-with-data-02/)
+### 2 - [Types of studies](https://openintro.shinyapps.io/ims-01-data-02/)
 
 
 * Define observational studies and experiments
@@ -52,7 +52,7 @@ In this tutorial, we focus on steps 1 and 2 of this process.
   * Use R to make a contingency table
   * `group_by()` third variable and make table again to demonstrate Simpson's paradox
 
-### 3 - [Sampling strategies and experimental design](https://openintro.shinyapps.io/ims-01-getting-started-with-data-03/)
+### 3 - [Sampling strategies and experimental design](https://openintro.shinyapps.io/ims-01-data-03/)
 
 * Define simple random sample, stratified sample, cluster sample, multistage sample
 * Use R to obtain SRS and stratified sample
@@ -66,7 +66,7 @@ In this tutorial, we focus on steps 1 and 2 of this process.
 	* `slice_sample()`
 	* `group_by()` %>% `slice_sample()`
 
-### 4 - [Case study](https://openintro.shinyapps.io/ims-01-getting-started-with-data-04/)
+### 4 - [Case study](https://openintro.shinyapps.io/ims-01-data-04/)
 
 * Apply terminology, principles, and R code learned in this tutorial to a case study
 
